Implemented new oils

--- a/src/main/resources/assets/spellbladenext/lang/en_us.json
+++ b/src/main/resources/assets/spellbladenext/lang/en_us.json
@@ -17,6 +17,9 @@
   "item.spellbladenext.spelloil": "Spell Oil",
   "item.spellbladenext.whirlwindoil": "Whirlwind Oil",
   "item.spellbladenext.smiteoil": "Smite Oil",
+  "item.spellbladenext.eviscerateoil": "Eviscerate Oil",
+  "item.spellbladenext.finalstrikeoil": "Final Strike Oil",
+  "item.spellbladenext.flickerstrikeoil": "Flicker Strike Oil",
   "item.spellbladenext.fire_battlemage_spell_book": "Fire Techniques",
   "item.spellbladenext.frost_battlemage_spell_book": "Frost Techniques",
   "item.spellbladenext.arcane_battlemage_spell_book": "Arcane Techniques",
