Change some names

--- a/src/main/resources/assets/spellbladenext/lang/en_us.json
+++ b/src/main/resources/assets/spellbladenext/lang/en_us.json
@@ -18,8 +18,8 @@
   "item.spellbladenext.spelloil": "Spell Oil",
   "item.spellbladenext.whirlwindoil": "Whirlwind Oil",
   "item.spellbladenext.smiteoil": "Smite Oil",
-  "item.spellbladenext.eviscerateoil": "Eviscerate Oil",
-  "item.spellbladenext.finalstrikeoil": "Final Strike Oil",
+  "item.spellbladenext.eviscerateoil": "Massacre Oil",
+  "item.spellbladenext.finalstrikeoil": "Sonic Strike Oil",
   "item.spellbladenext.flickerstrikeoil": "Flicker Strike Oil",
   "item.spellbladenext.fire_battlemage_spell_book": "Fire Techniques",
   "item.spellbladenext.frost_battlemage_spell_book": "Frost Techniques",
