--- a/src/main/resources/assets/spellbladenext/lang/en_us.json
+++ b/src/main/resources/assets/spellbladenext/lang/en_us.json
@@ -7,10 +7,15 @@
   "attribute.name.spellbladenext.converttofrost" : "Attack Damage gained as Frost Power",
   "attribute.name.spellbladenext.converttoarcane" : "Attack Damage gained as Arcane Power",
   "attribute.name.spellbladenext.converttoheal" : "Attack Damage gained as Healing Power",
+  "attribute.name.spellbladenext.purpose" : "of Non-Healing Spell Power gained as Healing Power",
 
+  "spellbladenext.spellbladetext": "Upon casting a spell with this Spellblade, you gain Strength and Haste equal to a quarter of your power relating to the spell's school, for up to however long the cooldown of the spell is.",
   "item.spellbladenext.ashes": "Ashes of the Stars",
-  "item.spellbladenext.omni": "Crystallised Omniscience",
+  "item.spellbladenext.higherpurpose": "Higher Purpose",
+  "item.spellbladenext.theavatar": "The Avatar",
 
+  "item.spellbladenext.omni": "Crystallised Omniscience",
+  "spellblades.avatarof" : "Avatar of",
   "itemGroup.spellbladenext.general": "Spellblades and Such",
   "item.spellbladenext.arcane_blade": "Arcane Spellblade",
    "item.spellbladenext.frost_blade": "Frost Spellblade",
@@ -53,7 +58,7 @@
   "spell.spellbladenext.monkeyslam.name": "Grand Vault",
   "spell.spellbladenext.monkeyslam.description": "Leap into the clouds, becoming invulnerable while channeling.",
   "spell.spellbladenext.reckoning.name": "Monkey King's Reckoning",
-  "spell.spellbladenext.reckoning.description": "Spin, dealing {damage} non-crit physical damage per second, multiplied by your attack speed. No penalty for hitting multiple enemies.",
+  "spell.spellbladenext.reckoning.description": "Spin, dealing {damage} physical damage per second, multiplied by your attack speed. No penalty for hitting multiple enemies.",
   "spell.spellbladenext.combustion.name": "Fan the Flames",
   "spell.spellbladenext.combustion.description": "Passive: Your touch sets enemies on fire for 2 seconds. Active: Channel to make already burning enemies around you take fire damage faster, taking {damage} fire damage per second.",
   "spell.spellbladenext.phoenixdive.name": "Phoenix Dive",
@@ -91,19 +96,19 @@
   "spell.spellbladenext.finalstrike.description": "Charge up a deadly attack against all enemies in a line, teleporting behind the last one and dealing {damage}_0 physical damage plus an additional {damage}_1 arcane spell damage.",
 
   "spell.spellbladenext.eviscerate.name": "Massacre",
-  "spell.spellbladenext.eviscerate.description": "Become intangible, attacking the nearest enemy five times over a second, dealing {damage}_0 physical damage and {damage}_1 frost damage, both multiplied by your attack speed. If this kills the enemy before the last hit, you can continue channeling to target the closest enemy with an additional second of strikes.",
+  "spell.spellbladenext.eviscerate.description": "Become intangible, attacking the nearest enemy five times over a second, dealing {damage}_0 physical damage and {damage}_1 frost damage, both multiplied by your attack speed. If this kills the enemy before the last hit, these effects continue onto another enemy.",
 
   "spell.spellbladenext.whirlingblades.name": "Riptide",
   "spell.spellbladenext.whirlingblades.description": "Aim and launch yourself as if with a riptide-enchanted trident",
 
   "spell.spellbladenext.flicker_strike.name": "Flickering Flame",
-  "spell.spellbladenext.flicker_strike.description": "Jump onto nearby enemies equally, dealing {damage}_0 non-crit physical damage plus an additional {damage}_1 fire damage, scaled by attack speed. Focuses on one target if there is only one target.",
+  "spell.spellbladenext.flicker_strike.description": "Jump onto nearby enemies equally, dealing {damage}_0 physical damage plus an additional {damage}_1 fire damage, scaled by attack speed. Focuses on one target if there is only one target.",
 
   "spell.spellbladenext.frostblink.name": "Arcane Flicker",
-  "spell.spellbladenext.frostblink.description": "Teleport behind an enemy, dealing {damage}_0 non-crit physical damage plus an additional {damage}_1 arcane damage.",
+  "spell.spellbladenext.frostblink.description": "Teleport behind an enemy, dealing {damage}_0 physical damage plus an additional {damage}_1 arcane damage.",
 
   "spell.spellbladenext.coldbuff.name": "Ice King's Curse",
-  "spell.spellbladenext.coldbuff.description": "If you have Frost Power IV+, unfreeze yourself, inflict 150% freeze on nearby enemies, gaining Strength V for 8 seconds.",
+  "spell.spellbladenext.coldbuff.description": "If you have Frost Power IV+, unfreeze yourself, inflict 150%% freeze on nearby enemies, gaining Strength V for 8 seconds.",
 
   "spell.spellbladenext.frostbloom0.name": "Frost Lotus",
   "spell.spellbladenext.frostbloom0.description": "Perform a nova around you dealing {damage} damage, chilling enemies hit, gaining one stack of Frost Power, up to 4. Increases in area per Frost Power. Chills you on use.",
@@ -116,28 +121,28 @@
   "spell.spellbladenext.frostvert.description": "Perform a fiery slam, first launching yourself into the air if already airborne. Deals {damage}_0 physical damage plus an additional {damage}_1 fire damage in an area. You can land safely while performing this move.",
 
   "spell.spellbladenext.smite.name": "Divine Smite",
-  "spell.spellbladenext.smite.description": "Smite enemies in front of you in an area, dealing {damage}_0 non-crit physical and {damage}_1 extra healing damage to each enemy hit, 50% more healing damage against undead.",
+  "spell.spellbladenext.smite.description": "Smite enemies in front of you in an area, dealing {damage}_0 physical and {damage}_1 extra healing damage to each enemy hit, 50%% more healing damage against undead. Gives you the Spellblade passive upon use.",
 
   "spell.spellbladenext.maelstrom.name": "Maelstrom",
-  "spell.spellbladenext.maelstrom.description": "Spin continuously, dealing {damage}_0 non-crit physical damage and {damage}_1 arcane damage per second, multiplied by attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
+  "spell.spellbladenext.maelstrom.description": "Spin continuously, dealing {damage}_0 physical damage and {damage}_1 arcane damage per second, multiplied by attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
 
   "spell.spellbladenext.inferno.name": "Inferno",
-  "spell.spellbladenext.inferno.description": "Spin continuously, dealing {damage}_0 non-crit physical damage and {damage}_1 fire damage per second multiplied by attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
+  "spell.spellbladenext.inferno.description": "Spin continuously, dealing {damage}_0 physical damage and {damage}_1 fire damage per second multiplied by attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
 
   "spell.spellbladenext.tempest.name": "Tempest",
-  "spell.spellbladenext.tempest.description": "Spin continuously, dealing {damage}_0 non-crit physical damage and {damage}_1 frost damage per second, multiplied by attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
+  "spell.spellbladenext.tempest.description": "Spin continuously, dealing {damage}_0 physical damage and {damage}_1 frost damage per second, multiplied by attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
 
   "spell.spellbladenext.whirlwind.name": "Whirlwind",
-  "spell.spellbladenext.whirlwind.description": "Spin continuously, {damage} non-crit physical damage per second, multiplied by your attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
+  "spell.spellbladenext.whirlwind.description": "Spin continuously, {damage} physical damage per second, multiplied by your attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
 
   "spell.spellbladenext.arcaneflourish.name": "Arcane Flourish",
-  "spell.spellbladenext.arcaneflourish.description": "Spin rapidly, dealing {damage}_0 non-crit physical damage, plus {damage}_1 arcane damage.",
+  "spell.spellbladenext.arcaneflourish.description": "Spin rapidly, dealing {damage}_0 physical damage, plus {damage}_1 arcane damage.",
 
   "spell.spellbladenext.fireflourish.name": "Fire Flourish",
-  "spell.spellbladenext.fireflourish.description": "Spin rapidly, dealing {damage}_0 non-crit physical damage, plus {damage}_1} fire damage.",
+  "spell.spellbladenext.fireflourish.description": "Spin rapidly, dealing {damage}_0 physical damage, plus {damage}_1} fire damage.",
 
   "spell.spellbladenext.frostflourish.name": "Frost Flourish",
-  "spell.spellbladenext.frostflourish.description": "Spin rapidly, dealing {damage}_0 non-crit physical damage, plus {damage}_1 frost damage.",
+  "spell.spellbladenext.frostflourish.description": "Spin rapidly, dealing {damage}_0 physical damage, plus {damage}_1 frost damage.",
   "item.spellbladenext.runegleam_ingot": "Runegleam Ingot",
   "item.spellbladenext.runeblaze_ingot": "Runeblaze Ingot",
   "item.spellbladenext.runefrost_ingot": "Runefrost Ingot",
@@ -201,8 +206,8 @@
   "item.spellbladenext.weaverswand": "Weaver's Wand",
 
   "item.spellbladenext.prismatic": "Prismatic Effigy",
-  "item.spellbladenext.magus_head": "Primordial Hood",
-  "item.spellbladenext.magus_chest": "Primordial Robe",
-  "item.spellbladenext.magus_legs": "Primordial Leggings",
-  "item.spellbladenext.magus_feet": "Primordial Boots"
+  "item.spellbladenext.magus_head": "Magus Hood",
+  "item.spellbladenext.magus_chest": "Magus Robe",
+  "item.spellbladenext.magus_legs": "Magus Leggings",
+  "item.spellbladenext.magus_feet": "Magus Boots"
 }
