--- a/src/main/resources/assets/spellbladenext/lang/en_us.json
+++ b/src/main/resources/assets/spellbladenext/lang/en_us.json
@@ -13,8 +13,15 @@
   "item.spellbladenext.ashes": "Ashes of the Stars",
   "item.spellbladenext.higherpurpose": "Higher Purpose",
   "item.spellbladenext.theavatar": "The Avatar",
+  "item.spellbladenext.thesis_spell_book": "Thesis of Awakening",
+  "item.spellbladenext.thesis_spell_book.desc": "Fear not the mage who has cast a thousand different spells once, fear the mage who has cast a single spell a thousand times.",
 
   "item.spellbladenext.omni": "Crystallised Omniscience",
+  "item.spellbladenext.tabula_rasa": "Tabula Rasa",
+  "item.spellbladenext.tabula_rasa.desc": "If you wish to be reborn, empty is the best way to be.",
+  "item.spellbladenext.tabula_rasa.desc2": "Apply up to six Spell Oils onto this item.",
+
+
   "spellblades.avatarof" : "Avatar of",
   "itemGroup.spellbladenext.general": "Spellblades and Such",
   "item.spellbladenext.arcane_blade": "Arcane Spellblade",
@@ -32,6 +39,9 @@
   "item.spellbladenext.rifle": "Runeblaze Rifle",
 
   "item.spellbladenext.spelloil": "Spell Oil",
+  "item.spellbladenext.spelloil.desc1": "Adds the bound spell to an unbound tool.",
+  "item.spellbladenext.spelloil.desc2": "Drag to an item and right click to apply. IRREVERSIBLE.",
+
   "item.spellbladenext.whirlwindoil": "Whirlwind Oil",
   "item.spellbladenext.smiteoil": "Smite Oil",
   "item.spellbladenext.eviscerateoil": "Massacre Oil",
@@ -53,14 +63,17 @@
   "entity.spellbladenext.hexbladeportal": "Hexblade Portal",
 
   "item.spellbladenext.monkeystaff": "Pillar of the Monkey King",
+  "spell.spellbladenext.thesis.name": "Awakened",
+  "spell.spellbladenext.thesis.description": "You have dedicated your life to the casting of one particular spell. You have 50%% more spell power and spell haste.",
+
   "spell.spellbladenext.monkeyreflect.name": "Rending Winds",
   "spell.spellbladenext.monkeyreflect.description": "Spin up a gust of wind, dealing heavy knockback and {damage} physical damage (can crit) per second to the target enemy.",
   "spell.spellbladenext.monkeyslam.name": "Grand Vault",
   "spell.spellbladenext.monkeyslam.description": "Leap into the clouds, becoming invulnerable while channeling.",
   "spell.spellbladenext.reckoning.name": "Monkey King's Reckoning",
   "spell.spellbladenext.reckoning.description": "Spin, dealing {damage} physical damage per second, multiplied by your attack speed. No penalty for hitting multiple enemies.",
-  "spell.spellbladenext.combustion.name": "Fan the Flames",
-  "spell.spellbladenext.combustion.description": "Passive: Your touch sets enemies on fire for 2 seconds. Active: Channel to make already burning enemies around you take fire damage faster, taking {damage} fire damage per second.",
+  "spell.spellbladenext.combustion.name": "Phoenix Curse",
+  "spell.spellbladenext.combustion.description": "Passive: Your damage sets enemies on fire for 4 seconds and gives them Phoenix's Curse for the same duration, preventing fires on them from going out. Active: Channel to make already burning enemies around you take fire damage faster, taking {damage} fire damage per second.",
   "spell.spellbladenext.phoenixdive.name": "Phoenix Dive",
   "spell.spellbladenext.phoenixdive.description": "Blink towards the target direction, performing a nova for {damage} fire damage upon landing and setting hit enemies on fire.",
   "spell.spellbladenext.snuffout.name": "Wildfire",
@@ -93,19 +106,19 @@
   "spell.spellbladenext.fireoverdrive.description": "{damage} Fire damage in an area around you. Activates normally and on hit.",
 
   "spell.spellbladenext.finalstrike.name": "Sonic Strike",
-  "spell.spellbladenext.finalstrike.description": "Charge up a deadly attack against all enemies in a line, teleporting behind the last one and dealing {damage}_0 physical damage plus an additional {damage}_1 arcane spell damage.",
+  "spell.spellbladenext.finalstrike.description": "Charge up a deadly attack against all enemies in a line, teleporting behind the last one and dealing {damage_1} physical damage plus an additional {damage_2} arcane spell damage.",
 
   "spell.spellbladenext.eviscerate.name": "Massacre",
-  "spell.spellbladenext.eviscerate.description": "Become intangible, attacking the nearest enemy five times over a second, dealing {damage}_0 physical damage and {damage}_1 frost damage, both multiplied by your attack speed. If this kills the enemy before the last hit, these effects continue onto another enemy.",
+  "spell.spellbladenext.eviscerate.description": "Become intangible, attacking the nearest enemy five times over a second, dealing {damage_1} physical damage and {damage_2} frost damage, both multiplied by your attack speed. If this kills the enemy before the last hit, these effects continue onto another enemy.",
 
   "spell.spellbladenext.whirlingblades.name": "Riptide",
   "spell.spellbladenext.whirlingblades.description": "Aim and launch yourself as if with a riptide-enchanted trident",
 
   "spell.spellbladenext.flicker_strike.name": "Flickering Flame",
-  "spell.spellbladenext.flicker_strike.description": "Jump onto nearby enemies equally, dealing {damage}_0 physical damage plus an additional {damage}_1 fire damage, scaled by attack speed. Focuses on one target if there is only one target.",
+  "spell.spellbladenext.flicker_strike.description": "Jump onto nearby enemies equally, dealing {damage_1} physical damage plus an additional {damage_2} fire damage, scaled by attack speed. Focuses on one target if there is only one target.",
 
   "spell.spellbladenext.frostblink.name": "Arcane Flicker",
-  "spell.spellbladenext.frostblink.description": "Teleport behind an enemy, dealing {damage}_0 physical damage plus an additional {damage}_1 arcane damage.",
+  "spell.spellbladenext.frostblink.description": "Teleport behind an enemy, dealing {damage_1} physical damage plus an additional {damage_2} arcane damage.",
 
   "spell.spellbladenext.coldbuff.name": "Ice King's Curse",
   "spell.spellbladenext.coldbuff.description": "If you have Frost Power IV+, unfreeze yourself, inflict 150%% freeze on nearby enemies, gaining Strength V for 8 seconds.",
@@ -118,31 +131,31 @@
 
 
   "spell.spellbladenext.frostvert.name": "Dragon Slam",
-  "spell.spellbladenext.frostvert.description": "Perform a fiery slam, first launching yourself into the air if already airborne. Deals {damage}_0 physical damage plus an additional {damage}_1 fire damage in an area. You can land safely while performing this move.",
+  "spell.spellbladenext.frostvert.description": "Perform a fiery slam, first launching yourself into the air if already airborne. Deals {damage_1} physical damage plus an additional {damage_2} fire damage in an area. You can land safely while performing this move.",
 
   "spell.spellbladenext.smite.name": "Divine Smite",
-  "spell.spellbladenext.smite.description": "Smite enemies in front of you in an area, dealing {damage}_0 physical and {damage}_1 extra healing damage to each enemy hit, 50%% more healing damage against undead. Gives you the Spellblade passive upon use.",
+  "spell.spellbladenext.smite.description": "Smite enemies in front of you in an area, dealing {damage_1} physical and {damage_2} extra healing damage to each enemy hit, 50%% more healing damage against undead. Gives you the Spellblade passive upon use.",
 
   "spell.spellbladenext.maelstrom.name": "Maelstrom",
-  "spell.spellbladenext.maelstrom.description": "Spin continuously, dealing {damage}_0 physical damage and {damage}_1 arcane damage per second, multiplied by attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
+  "spell.spellbladenext.maelstrom.description": "Spin continuously, dealing {damage_1} physical damage and {damage_2} arcane damage per second, multiplied by attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
 
   "spell.spellbladenext.inferno.name": "Inferno",
-  "spell.spellbladenext.inferno.description": "Spin continuously, dealing {damage}_0 physical damage and {damage}_1 fire damage per second multiplied by attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
+  "spell.spellbladenext.inferno.description": "Spin continuously, dealing {damage_1} physical damage and {damage_2} fire damage per second multiplied by attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
 
   "spell.spellbladenext.tempest.name": "Tempest",
-  "spell.spellbladenext.tempest.description": "Spin continuously, dealing {damage}_0 physical damage and {damage}_1 frost damage per second, multiplied by attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
+  "spell.spellbladenext.tempest.description": "Spin continuously, dealing {damage_1} physical damage and {damage_2} frost damage per second, multiplied by attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
 
   "spell.spellbladenext.whirlwind.name": "Whirlwind",
   "spell.spellbladenext.whirlwind.description": "Spin continuously, {damage} physical damage per second, multiplied by your attack speed. Penalty for hitting multiple mobs, mitigated by Sweeping Edge. Shift to stop moving.",
 
   "spell.spellbladenext.arcaneflourish.name": "Arcane Flourish",
-  "spell.spellbladenext.arcaneflourish.description": "Spin rapidly, dealing {damage}_0 physical damage, plus {damage}_1 arcane damage.",
+  "spell.spellbladenext.arcaneflourish.description": "Spin rapidly, dealing {damage_1} physical damage, plus {damage_2} arcane damage.",
 
   "spell.spellbladenext.fireflourish.name": "Fire Flourish",
-  "spell.spellbladenext.fireflourish.description": "Spin rapidly, dealing {damage}_0 physical damage, plus {damage}_1} fire damage.",
+  "spell.spellbladenext.fireflourish.description": "Spin rapidly, dealing {damage_1} physical damage, plus {damage_2} fire damage.",
 
   "spell.spellbladenext.frostflourish.name": "Frost Flourish",
-  "spell.spellbladenext.frostflourish.description": "Spin rapidly, dealing {damage}_0 physical damage, plus {damage}_1 frost damage.",
+  "spell.spellbladenext.frostflourish.description": "Spin rapidly, dealing {damage_1} physical damage, plus {damage_2} frost damage.",
   "item.spellbladenext.runegleam_ingot": "Runegleam Ingot",
   "item.spellbladenext.runeblaze_ingot": "Runeblaze Ingot",
   "item.spellbladenext.runefrost_ingot": "Runefrost Ingot",
@@ -158,6 +171,7 @@
   "effect.spellbladenext.portalsickness": "Portal Sickness",
   "effect.spellbladenext.unleash": "Unleash",
   "effect.spellbladenext.slamming": "Dragon Slam",
+  "effect.spellbladenext.phoenixcurse": "Phoenix Curse",
 
   "stat.spellbladenext.hex": "Hex",
   "stat.spellbladenext.threat": "Threat",
